partial apis created with gloabal exception filter
