# src/api/restaurant/dto/create-restaurant.dto.ts
@@ -1,0 +1,11 @@
+
+export class CreateRestaurantDto {
+
+
+    restaurant_name: string;
+    address: string;
+    veg_only: boolean
+    cost: string
+    cusine_types: string
+    isOpen: boolean
+}
